-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P2
-
Affects Version/s: 11, 12
-
Component/s: hotspot
-
b14
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8213068 | 11.0.2 | Vladimir Kozlov | P2 | Closed | Fixed | b02 |
--with-jvm-variants=minimal:
In file included from /pool/buildbot/slaves/sobornost/jdkX/build/src/hotspot/share/utilities/globalDefinitions.hpp:29:0,
from /pool/buildbot/slaves/sobornost/jdkX/build/src/hotspot/share/utilities/align.hpp:28,
from /pool/buildbot/slaves/sobornost/jdkX/build/src/hotspot/share/runtime/globals.hpp:29,
from /pool/buildbot/slaves/sobornost/jdkX/build/src/hotspot/share/memory/allocation.hpp:28,
from /pool/buildbot/slaves/sobornost/jdkX/build/src/hotspot/share/oops/array.hpp:28,
from /pool/buildbot/slaves/sobornost/jdkX/build/src/hotspot/share/memory/universe.hpp:28,
from /pool/buildbot/slaves/sobornost/jdkX/build/src/hotspot/share/code/oopRecorder.hpp:28,
from /pool/buildbot/slaves/sobornost/jdkX/build/src/hotspot/share/asm/codeBuffer.hpp:28,
from /pool/buildbot/slaves/sobornost/jdkX/build/src/hotspot/share/asm/assembler.hpp:28,
from /pool/buildbot/slaves/sobornost/jdkX/build/src/hotspot/cpu/x86/macroAssembler_x86.cpp:27:
/pool/buildbot/slaves/sobornost/jdkX/build/src/hotspot/cpu/x86/macroAssembler_x86.cpp: In member function 'void MacroAssembler::setvectmask(Register, Register)':
/pool/buildbot/slaves/sobornost/jdkX/build/src/hotspot/cpu/x86/macroAssembler_x86.cpp:3270:13: error: 'PostLoopMultiversioning' was not declared in this scope
... (rest of output omitted)
In file included from /pool/buildbot/slaves/sobornost/jdkX/build/src/hotspot/share/utilities/globalDefinitions.hpp:29:0,
from /pool/buildbot/slaves/sobornost/jdkX/build/src/hotspot/share/utilities/align.hpp:28,
from /pool/buildbot/slaves/sobornost/jdkX/build/src/hotspot/share/runtime/globals.hpp:29,
from /pool/buildbot/slaves/sobornost/jdkX/build/src/hotspot/share/memory/allocation.hpp:28,
from /pool/buildbot/slaves/sobornost/jdkX/build/src/hotspot/share/oops/array.hpp:28,
from /pool/buildbot/slaves/sobornost/jdkX/build/src/hotspot/share/memory/universe.hpp:28,
from /pool/buildbot/slaves/sobornost/jdkX/build/src/hotspot/share/code/oopRecorder.hpp:28,
from /pool/buildbot/slaves/sobornost/jdkX/build/src/hotspot/share/asm/codeBuffer.hpp:28,
from /pool/buildbot/slaves/sobornost/jdkX/build/src/hotspot/share/asm/assembler.hpp:28,
from /pool/buildbot/slaves/sobornost/jdkX/build/src/hotspot/cpu/x86/macroAssembler_x86.cpp:27:
/pool/buildbot/slaves/sobornost/jdkX/build/src/hotspot/cpu/x86/macroAssembler_x86.cpp: In member function 'void MacroAssembler::setvectmask(Register, Register)':
/pool/buildbot/slaves/sobornost/jdkX/build/src/hotspot/cpu/x86/macroAssembler_x86.cpp:3270:13: error: 'PostLoopMultiversioning' was not declared in this scope
... (rest of output omitted)
- backported by
-
JDK-8213068 Minimal VM build failures after JDK-8211251 (Default mask register for avx512 instructions)
-
- Closed
-
- relates to
-
JDK-8211251 Default mask register for avx512 instructions
-
- Resolved
-