8211375: Minimal VM build failures after JDK-8211251 (Default mask register for avx512 instructions)

Reviewed-by: kvn